--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>top.ncserver</groupId>
     <artifactId>update</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -31,6 +30,16 @@
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
             <version>3.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.to2mbn</groupId>
+            <artifactId>jmccc</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.to2mbn</groupId>
+            <artifactId>jmccc-yggdrasil-authenticator</artifactId>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
