--- a/pom.xml
+++ b/pom.xml
@@ -51,5 +51,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.13.2-R0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
