--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,8 @@
             <artifactId>commons-net</artifactId>
             <version>3.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.to2mbn</groupId>
-            <artifactId>jmccc</artifactId>
-            <version>2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.to2mbn</groupId>
-            <artifactId>jmccc-yggdrasil-authenticator</artifactId>
-            <version>2.4</version>
-        </dependency>
+
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -55,6 +47,11 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
             <version>1.13.2-R0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
         </dependency>
     </dependencies>
 </project>
