--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,10 @@
             <artifactId>json</artifactId>
             <version>20140107</version>
         </dependency>
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.2</version>
+        </dependency>
     </dependencies>
 </project>
